--- a/Task3/Task3.csproj
+++ b/Task3/Task3.csproj
@@ -24,6 +24,15 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Content Include="TestData\data1.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Include="TestData\data2.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
       <None Update="Config\UserCredentials.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
