Fixed some bugs in task3

--- a/Task3/Task3.csproj
+++ b/Task3/Task3.csproj
@@ -30,6 +30,9 @@
         <Content Include="TestData\data2.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <Content Include="Config\UserCredentials.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
